# QuPRS

./: .gitignore  .gitmodules  Dockerfile  NOTICE.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: benchmarks.yml  docker-build.yml  pytest.yml  python-publish.yml
benchmarks/Feymann/: barenco_tof_3.qc  barenco_tof_4.qc  gf2^16_mult.qc  gf2^32_mult.qc  gf2^5_mult.qc  gf2^64_mult.qc  gf2^7_mult.qc  ham15-high.qc  ham15-low.qc  ham15-med.qc  mod5_4.qc  mod_adder_1024.qc  qcla_adder_10.qc  qcla_com_7.qc  qcla_mod_7.qc  rc_adder_6.qc  tof_5.qc
benchmarks/Feymann/h,y,z,t,tdg,cx/: adder_8.qc  barenco_tof_10.qasm  barenco_tof_10.qc  barenco_tof_4.qasm  barenco_tof_5.qc  gf2^4_mult.qc  gf2^9_mult.qc  grover_5.qc  ham15-med.qasm  ham15-med.qc  mod5_4.qasm  mod5_4.qc  mod_mult_55.qc  mod_red_21.qc  qcla_com_7.qasm  qcla_com_7.qc  qcla_mod_7.qc  rc_adder_6.qc  tof_3.qasm  tof_4.qc  tof_5.qasm  vbe_adder_3.qasm
benchmarks/Feynman/: adder_8.qc  barenco_tof_10.qc  barenco_tof_5.qc  csla_mux_3.qc  csum_mux_9.qc  gf2^10_mult.qc  gf2^4_mult.qc  gf2^6_mult.qc  gf2^8_mult.qc  gf2^9_mult.qc  grover_5.qc  hwb6.qc  mod_mult_55.qc  mod_red_21.qc  qft_4.qc  tof_10.qc  tof_3.qc  tof_4.qc  vbe_adder_3.qc
benchmarks/Feynman/h,y,z,t,tdg,cx/: adder_8.qasm  barenco_tof_3.qasm  barenco_tof_3.qc  barenco_tof_4.qc  barenco_tof_5.qasm  csla_mux_3.qasm  csla_mux_3.qc  csum_mux_9.qasm  csum_mux_9.qc  gf2^10_mult.qasm  gf2^10_mult.qc  gf2^16_mult.qasm  gf2^16_mult.qc  gf2^32_mult.qasm  gf2^32_mult.qc  gf2^4_mult.qasm  gf2^5_mult.qasm  gf2^5_mult.qc  gf2^64_mult.qasm  gf2^64_mult.qc  gf2^6_mult.qasm  gf2^6_mult.qc  gf2^7_mult.qasm  gf2^7_mult.qc  gf2^8_mult.qasm  gf2^8_mult.qc  gf2^9_mult.qasm  grover_5.qasm  ham15-high.qasm  ham15-high.qc  ham15-low.qasm  ham15-low.qc  hwb6.qasm  hwb6.qc  mod_adder_1024.qasm  mod_adder_1024.qc  mod_mult_55.qasm  mod_red_21.qasm  qcla_adder_10.qasm  qcla_adder_10.qc  (+10 more)
benchmarks/MQTBench/Random_Pauli/: ghz_nativegates_ibm_qiskit_opt0_128.qasm  ghz_nativegates_ibm_qiskit_opt0_64.qasm  graphstate_nativegates_ibm_qiskit_opt0_16.qasm  graphstate_nativegates_ibm_qiskit_opt0_32.qasm  graphstate_nativegates_ibm_qiskit_opt0_64.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_4.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_5.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_6.qasm  qaoa_nativegates_ibm_qiskit_opt0_11.qasm  qaoa_nativegates_ibm_qiskit_opt0_7.qasm  qaoa_nativegates_ibm_qiskit_opt0_9.qasm  qft_nativegates_ibm_qiskit_opt0_16.qasm  qft_nativegates_ibm_qiskit_opt0_20.qasm  qft_nativegates_ibm_qiskit_opt0_22.qasm  qft_nativegates_ibm_qiskit_opt0_24.qasm  qnn_nativegates_ibm_qiskit_opt0_12.qasm  qnn_nativegates_ibm_qiskit_opt0_4.qasm  qnn_nativegates_ibm_qiskit_opt0_8.qasm  qpeexact_nativegates_ibm_qiskit_opt0_16.qasm  qpeexact_nativegates_ibm_qiskit_opt0_20.qasm  qpeexact_nativegates_ibm_qiskit_opt0_24.qasm  qpeexact_nativegates_ibm_qiskit_opt0_8.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_16.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_20.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_24.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_8.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_3.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_4.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_5.qasm  vqe_nativegates_ibm_qiskit_opt0_16.qasm  vqe_nativegates_ibm_qiskit_opt0_4.qasm  vqe_nativegates_ibm_qiskit_opt0_8.qasm  wstate_nativegates_ibm_qiskit_opt0_16.qasm  wstate_nativegates_ibm_qiskit_opt0_32.qasm  wstate_nativegates_ibm_qiskit_opt0_4.qasm  wstate_nativegates_ibm_qiskit_opt0_8.qasm
benchmarks/MQTBench/Random_Rotation/: ghz_nativegates_ibm_qiskit_opt0_128.qasm  ghz_nativegates_ibm_qiskit_opt0_32.qasm  ghz_nativegates_ibm_qiskit_opt0_64.qasm  graphstate_nativegates_ibm_qiskit_opt0_16.qasm  graphstate_nativegates_ibm_qiskit_opt0_32.qasm  graphstate_nativegates_ibm_qiskit_opt0_64.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_4.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_5.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_6.qasm  qaoa_nativegates_ibm_qiskit_opt0_11.qasm  qaoa_nativegates_ibm_qiskit_opt0_7.qasm  qaoa_nativegates_ibm_qiskit_opt0_9.qasm  qft_nativegates_ibm_qiskit_opt0_16.qasm  qft_nativegates_ibm_qiskit_opt0_20.qasm  qft_nativegates_ibm_qiskit_opt0_21.qasm  qft_nativegates_ibm_qiskit_opt0_22.qasm  qft_nativegates_ibm_qiskit_opt0_23.qasm  qft_nativegates_ibm_qiskit_opt0_24.qasm  qnn_nativegates_ibm_qiskit_opt0_12.qasm  qnn_nativegates_ibm_qiskit_opt0_4.qasm  qnn_nativegates_ibm_qiskit_opt0_8.qasm  qpeexact_nativegates_ibm_qiskit_opt0_16.qasm  qpeexact_nativegates_ibm_qiskit_opt0_20.qasm  qpeexact_nativegates_ibm_qiskit_opt0_21.qasm  qpeexact_nativegates_ibm_qiskit_opt0_22.qasm  qpeexact_nativegates_ibm_qiskit_opt0_23.qasm  qpeexact_nativegates_ibm_qiskit_opt0_24.qasm  qpeexact_nativegates_ibm_qiskit_opt0_8.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_16.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_20.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_21.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_22.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_23.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_24.qasm  qpeinexact_nativegates_ibm_qiskit_opt0_8.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_3.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_4.qasm  qwalk-noancilla_nativegates_ibm_qiskit_opt0_5.qasm  vqe_nativegates_ibm_qiskit_opt0_16.qasm  vqe_nativegates_ibm_qiskit_opt0_4.qasm  (+5 more)
benchmarks/MQTBench/h,ry,rz,cx/: ghz_nativegates_ibm_qiskit_opt0_128.qasm  ghz_nativegates_ibm_qiskit_opt0_32.qasm  ghz_nativegates_ibm_qiskit_opt0_64.qasm  graphstate_nativegates_ibm_qiskit_opt0_16.qasm  graphstate_nativegates_ibm_qiskit_opt0_32.qasm  graphstate_nativegates_ibm_qiskit_opt0_64.qasm  qaoa_nativegates_ibm_qiskit_opt0_7.qasm  (+38 more)
cmake/: FindGMP.cmake  FindMPFR.cmake
scripts/: generate_error_circuit.py  hatch_build.py
scripys/: generate_stubs.py
src/: generate_benchmark_report.py
src/QuPRS/: __init__.py  _version.py
test/: test_Feynman.py  test_Feynmann.py  test_MQT.py  test_RR.py  test_WMC.py  test_random_circuit.py
wrapper/: CMakeLists.txt
(+20 files in other folders)
