[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "QuPRS"
authors = [
    { name = "Wei-Jia Huang", email = "wei.jia.huang.physics@gmail.com" },
]
description = "QuPRS: Quantum Path-sum Reduction and Solver" 
keywords = ["pathsum", "weighted model counting", "quantum circuit", "equivalence checking", ]
readme = "README.md"
license-files  = ["LICENSE.md", "NOTICE.md"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha", # (Alpha, Beta, Production/Stable)
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent", 
]
dependencies = [
    "numpy",
    "sympy",
    "symengine",
    "qiskit<2.0,>=1.0.0",
    "qiskit-qasm3-import>=0.5.1",
]
dynamic = ["version"]
[project.optional-dependencies]
dev = [
    "ipykernel",
    "build",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-flake8",
    "pytest-benchmark",
    "pytest-html",
    "pandas",
    "tqdm",
    "hatch",
    "hatch-vcs",
]
[project.urls]
Homepage = "https://github.com/PhysicsQoo/QuPRS" # GitHub link
PyPI = "https://pypi.org/project/QuPRS/"
# (Optional) Other URLs related to your project
# "Bug Tracker" = "..."
# "Documentation" = "..."
[tool.hatch.version]
source = "vcs"
path = "src/QuPRS/_version.py"
fallback = "0.0.1"

[tool.hatch.build]
packages = ["src/QuPRS"]

[tool.hatch.build.hooks.custom]
# Points to our custom build script
path = "hatch_build.py"

[tool.cibuildwheel]
skip = "*-win*"
[tool.cibuildwheel.linux]
before-build-linux = "sudo apt-get update && sudo apt-get install -y libgmp-dev libmpfr-dev"
[tool.cibuildwheel.macos]
before-build-macos = "brew install gmp mpfr"
